--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grunt-less",
   "description": "LESS task for grunt.",
   "version": "0.1.0",
+  "homepage": "https://github.com/jharding/grunt-less",
   "author": {
     "name": "Jake Harding",
     "email": "jacob.s.harding@gmail.com"
@@ -22,16 +23,16 @@
   "main": "grunt.js",
   "bin": "bin/grunt-less",
   "engines": {
-    "node": "*"
+    "node": ">=0.6.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt": "~0.3.7"
+    "grunt": "~0.3.7",
+    "less": "~1.3"
   },
   "devDependencies": {
-    "grunt": "~0.3.7"
   },
-  "keywords": []
+  "keywords": ["less", "grunt"]
 }
