--- a/.lvimrc
+++ b/.lvimrc
@@ -1,3 +1,1 @@
-set tabstop=2
-set softtabstop=2
-set shiftwidth=2
+autocmd BufRead,BufNewFile *.js set tabstop=2 | set softtabstop=2 |set shiftwidth=2
