--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt-less",
-  "description": "LESS task for grunt.",
+  "description": "Grunt task for LESS.",
   "version": "0.1.3",
   "homepage": "https://github.com/jharding/grunt-less",
   "author": {
@@ -33,6 +33,7 @@
     "less": "~1.3"
   },
   "devDependencies": {
+    "grunt": "~0.3.7"
   },
   "keywords": ["less", "grunt", "gruntplugin"]
 }
