--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">=0.6.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt --base ./test/ --config ./test/grunt.js"
   },
   "dependencies": {
     "grunt": "~0.3.7",
